[gd_scene load_steps=3 format=3 uid="uid://bxeymooi2xxiu"]

[ext_resource type="Script" path="res://Menu/menu_principal.gd" id="1_pn23e"]
[ext_resource type="Texture2D" uid="uid://ca7dif0cbq8j6" path="res://Sprites/BackgroundV1.png" id="2_uves7"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pn23e")

[node name="BoxContainer" type="BoxContainer" parent="."]
custom_minimum_size = Vector2(480, 720)
layout_mode = 0
offset_right = 502.0
offset_bottom = 137.0
alignment = 1
vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 1
alignment = 1

[node name="Label" type="Label" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "MENU PRINCIPAL"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ButtonPlay" type="Button" parent="BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Iniciar juego"

[node name="ButtonTotorial" type="Button" parent="BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Tutorail"

[node name="ButtonExit" type="Button" parent="BoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Salir"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_filter = 1
scale = Vector2(5, 5.625)
texture = ExtResource("2_uves7")
centered = false
hframes = 4
frame = 3

[connection signal="pressed" from="BoxContainer/VBoxContainer/HBoxContainer/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/HBoxContainer/ButtonTotorial" to="." method="_on_button_totorial_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/HBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
